--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 <body>
 	<noscript>
 		You need to enable JavaScript to run this app.
+		codesandbox and netlify
 	</noscript>
 	<div id="root"></div>
 	<!--
